--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,9 +3,11 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Talks"
+    url: /talks/
+
   - title: "CV"
     url: /cv/
-    
+
   - title: "Portfolio"
     url: /portfolio/
-        
